# mecha-trust-ic

./: Cargo.toml  README.md  mecha-trust-ic_0.1.0.bb
src/: generate_key.rs  main.rs  read_write_ic.rs  sign_file_with_key.rs  verify_signature.rs
