[package]
name = "mecha-trust-ic"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Dhruvesh08/mecha-trust-ic"
homepage = "https://github.com/Dhruvesh08/mecha-trust-ic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
